--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
     .dropPlacement1 {
             position: absolute;
             left: 16px;
-            top: 60px;	    
+            top: 60px;
+            width: 323px;
+            height: 208px;	    
         }
         .dropPlacement2 {
             position: absolute;
