--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
     <div id="videoList">
         <select id="videoSelector" size="10" onchange="changeVideo()">
             <option value="houseparty.mp4">House Party</option>
-            <option value="iSuckButt.mp4">I Suck Butt</option>
-	    	<option value="AngelsDont.mp4">Angels Don't</option>
+            <option value="https://1drv.ms/v/s!AoNxwIvxRGHAjBhCax8WB7Aq5LbY?e=XglkvT>I Suck Butt</option>
+		    <option value="AngelsDont.mp4">Angels Don't</option>
             <option value="NervousTonight.mp4">Nervous Tonight</option>
             <option value="WorldGoneMad.mp4">World Gone Mad</option>
             <option value="LiesFromYou.mp4">Lies From You</option>
