--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <img src="steveLyonsArticle.jpg" class="draggable dropPlacement8" id="drag8" style="transform: rotate(10deg)">
     </div> 
     <video id="videoPlayer" controls autoplay class="draggable">
-        <source src="houseparty.mp4" type="video/mp4">
+        <source src="https://1drv.ms/v/s!AoNxwIvxRGHAjBhCax8WB7Aq5LbY" type="video/mp4">
     </video> 
     <script src="script.js"></script>
 </body>
