--- a/index.html
+++ b/index.html
@@ -87,8 +87,7 @@
     <div id="videoList">
         <select id="videoSelector" size="10" onchange="changeVideo()">
             <option value="houseparty.mp4">House Party</option>
-            <option value="iSuckButt.mp4">I Suck Butt</option>
-            <option value="https://1drv.ms/v/s!AoNxwIvxRGHAjBhCax8WB7Aq5LbY">I Suck Butt</option>
+            <option value="iSuckButt.mp4">I Suck Butt</option>           
 	    	<option value="AngelsDont.mp4">Angels Don't</option>
             <option value="NervousTonight.mp4">Nervous Tonight</option>
             <option value="WorldGoneMad.mp4">World Gone Mad</option>
@@ -110,7 +109,7 @@
     <img src="steveLyonsArticle.jpg" class="draggable dropPlacement8" id="drag8" style="transform: rotate(10deg)">
     </div> 
     <video id="videoPlayer" controls autoplay class="draggable">
-        <source src="https://1drv.ms/v/s!AoNxwIvxRGHAjBhCax8WB7Aq5LbY" type="video/mp4">
+        <source src="houseparty.mp4" type="video/mp4">
     </video> 
     <script src="script.js"></script>
 </body>
