--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <option value="iSuckButt.mp4">I Suck Butt</option>           
 	    	<option value="AngelsDont.mp4">Angels Don't</option>
             <option value="NervousTonight.mp4">Nervous Tonight</option>
-            <option value="WorldGoneMad.mp4">World Gone Mad</option>
+            <option value="worldGoneMad.mp4">World Gone Mad</option>
             <option value="LiesFromYou.mp4">Lies From You</option>
             <option value="RunningDog.mp4">Running Dog</option>
             <option value="PerfectMe.mp4">Perfect Me</option>
