--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <img src="steveLyonsArticle.jpg" class="draggable dropPlacement8" id="drag8" style="transform: rotate(10deg)">
     </div> 
     <video id="videoPlayer" controls autoplay class="draggable">
-        <source src="worldGoneMad.mp4" type="video/mp4">
+        <source src="https://youtu.be/_8JbvfctbOg?list=PLJsQGxTZzYPAUKf1yQwLU0vharkoSkKAK" type="video/mp4">
     </video> 
     <script src="script.js"></script>
 </body>
