--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         }
         #videoList {
             position: absolute;
-            left: 25px;
-            top: 250px;	    
+            left: 10px;
+            top: 10px;	    
         }
 	.draggable {
             width: 100px;
@@ -46,13 +46,13 @@
         .dropPlacement4 {
             position: absolute;
             left: px;
-            top: px;	    
+            top: 400px;	    
             width: 451px;
             height: 297px;
         }
         .dropPlacement5 {
             position: absolute;
-            left: px;
+            left: 400px;
             top: px;
             width: 451px;
             height: 297px;
@@ -83,12 +83,21 @@
     </style>
 </head>
 <body>
-    
+  
+    <img src="cassette.jpg" class="draggable dropPlacement1" id="drag1" style="transform: rotate(5deg);">
+    <img src="songList.jpg" class="draggable dropPlacement2" id="drag2" style="transform: rotate(-15deg);">
+    <img src="newpaperArticle.jpg" class="draggable dropPlacement3" id="drag3" style="transform: rotate(-10deg)">
+    <img src="onStage.jpg" class="draggable dropPlacement4" id="drag4" style="transform: rotate(4deg)">
+    <img src="onStageCloseUp.jpg" class="draggable dropPlacement5" id="drag5" style="transform: rotate(2deg)">
+    <img src="posterStained23Sept.jpg" class="draggable dropPlacement7" id="drag7" style="transform: rotate(-5deg)">
+    <img src="poster24Feb.jpg" class="draggable dropPlacement6" id="drag6" style="transform: rotate(10deg)">
+    <img src="steveLyonsArticle.jpg" class="draggable dropPlacement8" id="drag8" style="transform: rotate(10deg)">
+</div>
     <div id="videoList">
         <select id="videoSelector" size="10" onchange="changeVideo()">
-            <option value="houseparty.mp4">House Party</option>
-            <option value="ISuckButt.mp4">I Suck Butt</option>           
-	    	<option value="AngelsDont.mp4">Angels Don't</option>
+            <option value="_8JbvfctbOg">House Party</option>
+            <option value="M87Bz4NEzXc">I Suck Butt</option>           
+            <option value="v4uHAOj3O7c">Angels Don't</option>
             <option value="NervousTonight.mp4">Nervous Tonight</option>
             <option value="WorldGoneMad.mp4">World Gone Mad</option>
             <option value="LiesFromYou.mp4">Lies From You</option>
@@ -99,18 +108,13 @@
             <!-- Add other video options here -->
         </select>        
     </div>
-    <img src="cassette.jpg" class="draggable dropPlacement1" id="drag1" style="transform: rotate(5deg);">
-    <img src="songList.jpg" class="draggable dropPlacement2" id="drag2" style="transform: rotate(-15deg);">
-    <img src="newpaperArticle.jpg" class="draggable dropPlacement3" id="drag3" style="transform: rotate(-10deg)">
-    <img src="onStage.jpg" class="draggable dropPlacement4" id="drag4" style="transform: rotate(4deg)">
-    <img src="onStageCloseUp.jpg" class="draggable dropPlacement5" id="drag5" style="transform: rotate(2deg)">
-    <img src="posterStained23Sept.jpg" class="draggable dropPlacement7" id="drag7" style="transform: rotate(-5deg)">
-    <img src="poster24Feb.jpg" class="draggable dropPlacement6" id="drag6" style="transform: rotate(10deg)">
-    <img src="steveLyonsArticle.jpg" class="draggable dropPlacement8" id="drag8" style="transform: rotate(10deg)">
-    </div> 
-    <video id="videoPlayer" controls autoplay class="draggable">
-        <source src="https://youtu.be/_8JbvfctbOg?list=PLJsQGxTZzYPAUKf1yQwLU0vharkoSkKAK" type="video/mp4">
-    </video> 
+
+<!--    <video id="videoPlayer" controls autoplay class="draggable">
+       <source src="houseparty.mp4" type="video/mp4">
+   </video> -->
+
+    <iframe id="videoPlayer" class="draggable" width="400" src="https://www.youtube.com/embed/_8JbvfctbOg?list=PLJsQGxTZzYPAUKf1yQwLU0vharkoSkKAK" title="LoTek House Party" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+ 
     <script src="script.js"></script>
 </body>
 </html>
