--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
             width: 640px;
             height: 480px;
             position: absolute;
-            left: 200px;
-            top: 150px;
+            left: 150px;
+            top: 10px;
             cursor: grab;
         }
         #videoList {
             position: absolute;
             left: 10px;
-            top: 10px;	    
+            top: 10px;	
+            width: 100px;
+            height: 00px;    
         }
 	.draggable {
             width: 100px;
@@ -98,13 +100,13 @@
             <option value="_8JbvfctbOg">House Party</option>
             <option value="M87Bz4NEzXc">I Suck Butt</option>           
             <option value="v4uHAOj3O7c">Angels Don't</option>
-            <option value="NervousTonight.mp4">Nervous Tonight</option>
-            <option value="WorldGoneMad.mp4">World Gone Mad</option>
-            <option value="LiesFromYou.mp4">Lies From You</option>
-            <option value="RunningDog.mp4">Running Dog</option>
-            <option value="PerfectMe.mp4">Perfect Me</option>
-            <option value="FreedomFighter.mp4">Freedom Fighter</option>
-            <option value="HappySong.mp4">Happy Song</option>	
+            <option value="N8W5R4sVQOg">Nervous Tonight</option>
+            <option value="L8ZUaIrnC6Y">World Gone Mad</option>
+            <option value="yGjJWvSGm70">Lies From You</option>
+            <option value="ZOEJniRx1L0">Running Dog</option>
+            <option value="HlGvIPsZkxQ">Perfect Me</option>
+            <option value="yoWRdXoGIiT">Freedom Fighter</option>
+            <option value="KJ1B5Ey6Ze0">Happy Song</option>	
             <!-- Add other video options here -->
         </select>        
     </div>
