--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
         #videoList {
             position: absolute;
             left: 10px;
-            top: 10px;	
-            width: 100px;
-            height: 00px;    
+            top: 10px;
+            padding: 15px;	
+            margin: 5px;
+                
         }
 	.draggable {
             width: 100px;
@@ -47,7 +48,7 @@
         }
         .dropPlacement4 {
             position: absolute;
-            left: px;
+            left: 5px;
             top: 400px;	    
             width: 451px;
             height: 297px;
@@ -55,7 +56,7 @@
         .dropPlacement5 {
             position: absolute;
             left: 400px;
-            top: px;
+            top: 800px;
             width: 451px;
             height: 297px;
             	    
