--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
             top: 10px;
             cursor: grab;
         }
+        
+        /* Responsive styles for mobile devices */
+        @media (max-width: 600px) {
+            .videoList {
+            padding: 10px;  /* Larger padding for easier touch */
+            font-size: 1.2em;     /* Larger font for mobile */
+            }
+        }
+
         #videoList {
             position: absolute;
             left: 10px;
@@ -20,14 +29,6 @@
             margin: 10px;
             font-size: 16px;
         }
-        /* Responsive styles for mobile devices */
-        @media (max-width: 600px) {
-            .videoList {
-            padding: 12px 20px;  /* Larger padding for easier touch interaction */
-            font-size: 16px;     /* Larger font for better readability */
-        }
-        }
-
 	.draggable {
             width: 100px;
             height: auto;
@@ -105,7 +106,7 @@
     <img src="steveLyonsArticle.jpg" class="draggable dropPlacement8" id="drag8" style="transform: rotate(10deg)">
 
     <div id="videoList">
-        <select id="videoSelector" size="10" font-size=16px onchange="changeVideo()">
+        <select id="videoSelector" class="videoList" size="10" onchange="changeVideo()">
             <option value="_8JbvfctbOg">House Party</option>
             <option value="M87Bz4NEzXc">I Suck Butt</option>           
             <option value="v4uHAOj3O7c">Angels Don't</option>
