--- a/index.dropdown.html
+++ b/index.dropdown.html
@@ -16,9 +16,9 @@
             position: relative;
             display: flex;
             align-items:baseline;
-            justify-content: space-between;
-            padding: 10px 20px;
-            font-size: 18px;
+            justify-content: left;
+            padding: 20px 20px;
+            font-size: 36px;
             color: #000000;
             background: #faf6e9;
             border-radius: 5px;
@@ -39,6 +39,7 @@
             padding: 10px 20px;
             cursor: pointer;
             transition: all 0.3s;
+            font-size: 24px;
         }
         .custom-option:hover {
             background-color: #eee;
