--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
             width: 640px;
             height: 480px;
             position: absolute;
-            left: 225px;
-            top: 10px;
+            left: 300px;
+            top: 100px;
             cursor: grab;
         }
         .draggable {
@@ -20,21 +20,21 @@
         .dropPlacement1 {
             position: absolute;
             left: 16px;
-            top: 200px;
+            top: 150px;
             width: 323px;
             height: 208px;	    
         }
         .dropPlacement2 {
             position: absolute;
-            left: 100px;
-            top: 100px;
+            left: 350px;
+            top: 10px;
             width: 266px;
             height: 653px;    
         }
         .dropPlacement3 {
             position: absolute;
-            left: 150px;
-            top: 300px;	 
+            left: 100px;
+            top: 450px;	 
             width: 445px;
             height: 806px;   
         }
@@ -47,23 +47,23 @@
         }
         .dropPlacement5 {
             position: absolute;
-            left: 400px;
-            top: 800px;
+            left: 300px;
+            top: 750px;
             width: 451px;
             height: 297px;
             	    
         }
         .dropPlacement6{
             position: absolute;
-            left: 600px;
-            top: 200px;	
+            left: 500px;
+            top: 500px;	
             width: 629px;
             height: 821px;    
         }
         .dropPlacement7 {
             position: absolute;
             left: 200px;
-            top: 300px;
+            top: 350px;
             width: 821px;
             height: 629px;	    
         }
@@ -127,10 +127,12 @@
     <img src="songList.jpg" class="draggable dropPlacement2" id="drag2" style="transform: rotate(-15deg);">
     <img src="newpaperArticle.jpg" class="draggable dropPlacement3" id="drag3" style="transform: rotate(-10deg)">
     <img src="onStage.jpg" class="draggable dropPlacement4" id="drag4" style="transform: rotate(4deg)">
-    <img src="onStageCloseUp.jpg" class="draggable dropPlacement5" id="drag5" style="transform: rotate(2deg)">
+<!--    <img src="onStageCloseUp.jpg" class="draggable dropPlacement5" id="drag5" style="transform: rotate(2deg)">    -->
     <img src="posterStained23Sept.jpg" class="draggable dropPlacement7" id="drag7" style="transform: rotate(-5deg)">
     <img src="poster24Feb.jpg" class="draggable dropPlacement6" id="drag6" style="transform: rotate(10deg)">
-    <img src="steveLyonsArticle.jpg" class="draggable dropPlacement8" id="drag8" style="transform: rotate(10deg)">
+    <img src="steveLyonsArticle.jpg" class="draggable dropPlacement8" id="drag8" style="transform: rotate(5deg)">
+    <img src="onStageCloseUp.jpg" class="draggable dropPlacement5" id="drag5" style="transform: rotate(-4deg)">
+
 
 <div class="custom-select-wrapper" onclick="toggleDropdown()">
     <div class="custom-select">
